--- a/app/src/main/res/layout/note_activity.xml
+++ b/app/src/main/res/layout/note_activity.xml
@@ -78,14 +78,15 @@
     <ListView
         android:id="@+id/listview_notas"
         android:layout_width="347dp"
-        android:layout_height="59dp"
+        android:layout_height="400dp"
         android:background="@drawable/textviewnote"
         android:fontFamily="@font/roboto_mono"
         app:layout_constraintBottom_toBottomOf="@+id/tela_nota"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView12"
-        app:layout_constraintVertical_bias="0.312" />
+        app:layout_constraintVertical_bias="0.413" />
 
     <Button
         android:id="@+id/button8"
