--- a/app/src/main/res/layout/edt_notes_activity.xml
+++ b/app/src/main/res/layout/edt_notes_activity.xml
@@ -105,24 +105,22 @@
 
     <TextView
         android:id="@+id/textView17"
-        android:layout_width="84dp"
+        android:layout_width="122dp"
         android:layout_height="34dp"
         android:fontFamily="@font/roboto_mono"
-        android:text="Lembrete:"
+        android:text="Lembre-me em:"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.207"
+        app:layout_constraintHorizontal_bias="0.148"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.68" />
+        app:layout_constraintVertical_bias="0.681" />
 
-    <EditText
+    <Spinner
         android:id="@+id/edtNoteLembrete"
-        android:layout_width="99dp"
+        android:layout_width="90dp"
         android:layout_height="33dp"
         android:background="@drawable/textviewnote"
-        android:ems="10"
-        android:inputType="time"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.487"
