--- a/app/src/main/res/layout/edt_notes_activity.xml
+++ b/app/src/main/res/layout/edt_notes_activity.xml
@@ -111,10 +111,10 @@
         android:text="Lembre-me em:"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.148"
+        app:layout_constraintHorizontal_bias="0.121"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.681" />
+        app:layout_constraintVertical_bias="0.747" />
 
     <Spinner
         android:id="@+id/edtNoteLembrete"
@@ -123,13 +123,14 @@
         android:background="@drawable/textviewnote"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.487"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.679" />
+        app:layout_constraintVertical_bias="0.747" />
 
     <Button
         android:id="@+id/btnNoteNotification"
+        style="?android:attr/borderlessButtonStyle"
         android:layout_width="38dp"
         android:layout_height="38dp"
         android:background="@mipmap/ic_notification"
@@ -138,34 +139,7 @@
         app:layout_constraintHorizontal_bias="0.713"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.679"
-        style="?android:attr/borderlessButtonStyle" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="52dp"
-        android:layout_height="52dp"
-        app:layout_constraintBottom_toBottomOf="@+id/tela_nota"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.128"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.765"
-        app:srcCompat="@mipmap/ic_localization" />
-
-    <EditText
-        android:id="@+id/edtNoteLocalization"
-        android:layout_width="267dp"
-        android:layout_height="50dp"
-        android:background="@drawable/textviewnote"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.68"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.766" />
+        app:layout_constraintVertical_bias="0.751" />
 
     <Button
         android:id="@+id/btnNoteQuit"
