--- a/app/src/main/res/layout/new_note_activity.xml
+++ b/app/src/main/res/layout/new_note_activity.xml
@@ -107,69 +107,41 @@
 
     <TextView
         android:id="@+id/textView17"
-        android:layout_width="84dp"
+        android:layout_width="122dp"
         android:layout_height="34dp"
         android:fontFamily="@font/roboto_mono"
-        android:text="Lembrete:"
+        android:text="Lembre-me em:"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.207"
+        app:layout_constraintHorizontal_bias="0.11"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.68" />
+        app:layout_constraintVertical_bias="0.769" />
 
-    <EditText
+    <Spinner
         android:id="@+id/edtLembrete"
-        android:layout_width="98dp"
-        android:layout_height="29dp"
+        android:layout_width="90dp"
+        android:layout_height="33dp"
         android:background="@drawable/textviewnote"
-        android:ems="10"
-        android:inputType="time"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.479"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.675" />
+        app:layout_constraintVertical_bias="0.767" />
 
     <Button
         android:id="@+id/btnNotification"
+        style="?android:attr/borderlessButtonStyle"
         android:layout_width="38dp"
         android:layout_height="38dp"
         android:background="@mipmap/ic_notification"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.713"
+        app:layout_constraintHorizontal_bias="0.726"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.679"
-        style="?android:attr/borderlessButtonStyle" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="52dp"
-        android:layout_height="52dp"
-        app:layout_constraintBottom_toBottomOf="@+id/tela_nota"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.089"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.768"
-        app:srcCompat="@mipmap/ic_localization" />
-
-    <EditText
-        android:id="@+id/edtLocalization"
-        android:layout_width="267dp"
-        android:layout_height="50dp"
-        android:background="@drawable/textviewnote"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.68"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.766" />
+        app:layout_constraintVertical_bias="0.773" />
 
     <Button
         android:id="@+id/btnCheck"
