--- a/app/src/main/res/layout/new_note_activity.xml
+++ b/app/src/main/res/layout/new_note_activity.xml
@@ -135,13 +135,13 @@
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="38dp"
         android:layout_height="38dp"
-        android:background="@mipmap/ic_notification"
+        android:background="@mipmap/ic_sininho_claro_foreground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.726"
+        app:layout_constraintHorizontal_bias="0.675"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.773" />
+        app:layout_constraintVertical_bias="0.767" />
 
     <Button
         android:id="@+id/btnCheck"
